fix lookup of ComparableQPoint keys in QMap

QMap::value() failed to find existing keys in some edge cases.
Which lead to problems when translating points using a QMap.

This commit improves the operator<() to fix that.

BUG: 430942


(cherry picked from commit e1fc5c40c572e3e827e2488fedae856bd8a2927d)